--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.18",
+    "eslint-config-prettier": "^9.1.0",
     "prettier": "3.4.1",
     "typescript": "^5"
   }
