chore: install husky and lint-staged

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prepare": "husky"
   },
   "dependencies": {
     "next": "14.2.18",
@@ -20,7 +21,12 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.18",
     "eslint-config-prettier": "^9.1.0",
+    "husky": "^9.1.7",
+    "lint-staged": "^15.2.10",
     "prettier": "3.4.1",
     "typescript": "^5"
+  },
+  "lint-staged": {
+    "**/*.{ts,tsx}": ["eslint --fix", "prettier --write"]
   }
 }
