--- a/package.json
+++ b/package.json
@@ -17,16 +17,20 @@
   "devDependencies": {
     "@commitlint/cli": "^19.6.0",
     "@commitlint/config-conventional": "^19.6.0",
+    "@testing-library/react": "^16.0.1",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^8",
     "eslint-config-next": "14.2.18",
     "eslint-config-prettier": "^9.1.0",
     "husky": "^9.1.7",
+    "jsdom": "^25.0.1",
     "lint-staged": "^15.2.10",
     "prettier": "3.4.1",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vitest": "^2.1.7"
   },
   "lint-staged": {
     "**/*.{js,ts,tsx}": [
