--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "dayjs": "^1.11.13",
     "next": "14.2.18",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^5.4.0",
+    "react-markdown": "^9.0.1"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.6.0",
